--- a/src/i18n/locales/fr/vision.json
+++ b/src/i18n/locales/fr/vision.json
@@ -21,7 +21,7 @@
     "list": [
       {
         "title": "Excellence technique",
-        "description": "Nous poursuivons sans relâche l'excellence dans nos réalisations, avec des standards de qualité parmi les plus exigeants du secteur."
+        "description": "Nous poursuivons l'excellence dans nos réalisations, avec des standards de qualité élevés."
       },
       {
         "title": "Capital humain",
@@ -92,8 +92,8 @@
     "title": "Notre ambition pour l'avenir",
     "subtitle": "Rester partenaire de tous types d'acteurs industriels, du plus petit au plus structuré, dans une relation de proximité, de confiance et de continuité",
     "paragraphs": [
-      "Dans un contexte de relocalisation industrielle et de souveraineté technologique, le Groupe LLEDO Industries a un rôle à jouer. Notre ambition est de devenir le partenaire de référence des grands donneurs d'ordres de l'aéronautique et de la défense.",
-      "Nous investissons massivement dans nos équipements : usinage 5 axes dernière génération, outils de métrologie 3D, logiciels de simulation et d'optimisation. Notre objectif : être à la pointe de la technologie pour répondre aux cahiers des charges les plus exigeants.",
+      "Dans un contexte de relocalisation industrielle et de souveraineté technologique, le Groupe LLEDO Industries a un rôle à jouer. Notre ambition est d'accompagner les donneurs d'ordres de l'aéronautique et de la défense.",
+      "Nous investissons dans nos équipements : usinage 5 axes dernière génération, outils de métrologie 3D, logiciels de simulation et d'optimisation. Notre objectif : être à la pointe de la technologie pour répondre aux cahiers des charges les plus exigeants.",
       "Le développement de nos équipes est au cœur de notre stratégie. Formation continue, montée en compétences, transmission des savoir-faire : nous préparons l'avenir en cultivant l'excellence technique de nos collaborateurs.",
       "Nous développons également une activité de conception et commercialisation d'équipements GSE (Ground Support Equipment) pour hélicoptères sous la marque LLEDO Aerotools, en capitalisant sur notre expertise en mécanique de précision et notre connaissance du secteur aéronautique."
     ],
