--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -27,7 +27,7 @@
     },
     "productLabel": "Division AEROTOOLS – expertise GSE",
     "trust": {
-      "title": "De nombreux clients prestigieux nous font déjà confiance, et pourquoi pas vous ?",
+      "title": "Ils nous font confiance",
       "brands": [
         "Airbus Helicopters",
         "Safran",
@@ -38,10 +38,10 @@
   },
   "features": {
     "title": "Pourquoi choisir LLEDO Industries ?",
-    "subtitle": "Notre expertise technique et notre engagement qualité nous positionnent comme le partenaire de référence pour répondre à vos besoins industriels.",
+    "subtitle": "Une expertise technique reconnue et un engagement qualité pour répondre à vos besoins industriels.",
         "list": [
       {
-        "title": "Conformité garantie",
+        "title": "Conformité normative",
         "description": "Tous nos équipements respectent les normes EN 12312, EN 1915 et la Directive Machines 2006/42/CE.",
         "benefits": ["Interchangeabilité des composants", "Traçabilité complète", "Certifications industrielles"]
       },
