--- a/src/i18n/locales/fr/expertises.json
+++ b/src/i18n/locales/fr/expertises.json
@@ -16,9 +16,9 @@
         "Gravure laser"
       ],
       "capabilities": {
-        "capacity": "100 000 heures/an",
+        "capacity": "Capacité adaptée",
         "precision": "Tolérance ±0.01mm",
-        "machines": "15+ machines CNC"
+        "machines": "Parc machines CNC"
       },
       "certifications": ["ISO 9001:2015", "EN 9100:2018", "Interchangeabilité AIRBUS"],
       "ctaLabel": "Découvrir MPEB"
@@ -109,11 +109,11 @@
     }
   ],
   "stats": {
-    "title": "Le Groupe LLEDO en chiffres",
+    "title": "Le Groupe LLEDO",
     "list": [
       { "value": "36 ans", "label": "d'expérience" },
       { "value": "70", "label": "collaborateurs" },
-      { "value": "100 000h", "label": "de production/an" },
+      { "value": "Capacité", "label": "de production" },
       { "value": "5", "label": "entités complémentaires" }
     ]
   },
