--- a/src/i18n/locales/en/careers.json
+++ b/src/i18n/locales/en/careers.json
@@ -1,8 +1,8 @@
 {
-  "title": "Carrières - LLEDO Industries",
-  "description": "Rejoignez l'équipe LLEDO Industries et participez à l'innovation dans l'outillage aéronautique. Découvrez nos offres d'emploi.",
+  "title": "Careers - LLEDO Industries",
+  "description": "Join the LLEDO Industries team and participate in aerospace tooling innovation. Discover our job opportunities.",
   "hero": {
-    "title": "Carrières chez LLEDO Industries",
-    "subtitle": "Rejoignez une équipe passionnée et participez à l'innovation dans l'outillage aéronautique et les équipements GSE."
+    "title": "Careers at LLEDO Industries",
+    "subtitle": "Join a passionate team and participate in aerospace tooling and GSE equipment innovation."
   }
 }
