--- a/src/i18n/locales/en/contact.json
+++ b/src/i18n/locales/en/contact.json
@@ -1,38 +1,38 @@
 {
   "title": "Contact - LLEDO Industries",
-  "description": "Contactez LLEDO Industries pour vos projets d'outillage aéronautique et de maintenance GSE. Conseil d'experts et accompagnement personnalisé.",
+  "description": "Contact LLEDO Industries for your aerospace tooling and GSE maintenance projects. Expert advice and personalized support.",
   "hero": {
-    "title": "Contactez-nous",
-    "subtitle": "Notre équipe d'experts est à votre disposition pour répondre à vos questions et vous accompagner dans vos projets."
+    "title": "Contact Us",
+    "subtitle": "Our team of experts is at your disposal to answer your questions and support you in your projects."
   },
   "form": {
-    "title": "Échangez avec notre équipe"
+    "title": "Get in Touch"
   },
   "info": {
-    "title": "Informations de contact",
+    "title": "Contact Information",
     "phone": {
-      "label": "Téléphone",
+      "label": "Phone",
       "value": "+33 4 42 02 96 74",
-      "hours": "Lun-Ven 8h-18h"
+      "hours": "Mon-Fri 8am-6pm CET"
     },
     "email": {
       "label": "Email",
       "value": "contact@mpeb13.com",
-      "response": "Response guaranteed within 24h on weekdays"
+      "response": "We respond promptly on weekdays"
     },
     "address": {
-      "label": "Adresse",
+      "label": "Address",
       "value": "9-11 Boulevard de la Capelane",
       "city": "13170 Les Pennes-Mirabeau",
       "country": "France"
     }
   },
   "hours": {
-    "title": "Horaires d'ouverture",
-    "weekdays": "Lundi - Vendredi : 8h00 - 12h00 / 13h30 - 18h00",
-    "weekend": "Samedi - Dimanche : Fermé"
+    "title": "Opening Hours",
+    "weekdays": "Monday - Friday: 8:00am - 6:00pm CET",
+    "weekend": "Saturday - Sunday: Closed"
   },
   "map": {
-    "title": "Localisation"
+    "title": "Location"
   }
 }
