--- a/src/i18n/locales/en/homepage.json
+++ b/src/i18n/locales/en/homepage.json
@@ -1,34 +1,34 @@
 {
   "products": {
     "badge": "LLEDO AEROTOOLS",
-    "title": "Équipements GSE certifiés",
-    "subtitle": "Barres de remorquage et rollers hydrauliques conçus et fabriqués en France. Conformes Directive Machines 2006/42-CE et ISO 9667.",
+    "title": "Certified GSE Equipment",
+    "subtitle": "Towbars and hydraulic rollers designed and manufactured in France. Compliant with Machinery Directive 2006/42/EC and ISO 9667.",
     "cards": [
       {
         "id": "rl-r125",
-        "badge": "Best-seller",
-        "category": "Barre de remorquage",
+        "badge": "Reference",
+        "category": "Towbar",
         "name": "RL125-02",
-        "description": "Chariot de déplacement hydraulique pour H125/AS350 avec patins Ø80mm conformes Airbus.",
+        "description": "Hydraulic ground handling cart for H125/AS350 with Ø80mm skids compliant with Airbus.",
         "features": [
-          "CMU 3 500 kg testée à 4 375 kg",
-          "Vérin hydraulique 350 bar certifié",
-          "Patins Ø80mm homologués Airbus",
-          "Conforme EN 12312 & Directive Machines"
+          "SWL 3,500 kg tested at 4,375 kg",
+          "Certified 350 bar hydraulic cylinder",
+          "Ø80mm Airbus-approved skids",
+          "EN 12312 & Machinery Directive compliant"
         ],
         "link": "/aerotools/rl-r125"
       },
       {
         "id": "platform",
-        "badge": "Nouveau",
+        "badge": "New",
         "category": "Maintenance",
-        "name": "Plateforme d'accès",
-        "description": "Plateforme mobile ergonomique pour interventions en hauteur. Hauteur ajustable 2 à 4 m avec garde-corps conformes.",
+        "name": "Access Platform",
+        "description": "Ergonomic mobile platform for elevated work. Adjustable height 2 to 4 m with compliant guardrails.",
         "features": [
-          "Hauteur ajustable 2-4 m",
-          "Charge maximale 250 kg",
-          "Garde-corps sécurisés",
-          "Roues pivotantes verrouillables"
+          "Adjustable height 2-4 m",
+          "Maximum load 250 kg",
+          "Secured guardrails",
+          "Lockable swivel wheels"
         ],
         "link": "/aerotools"
       },
@@ -36,19 +36,19 @@
         "id": "tools-kit",
         "badge": "",
         "category": "Maintenance",
-        "name": "Kit outillage MRO",
-        "description": "Ensemble d'outillage spécialisé aéronautique avec traçabilité complète et mallette de transport.",
+        "name": "MRO Tooling Kit",
+        "description": "Specialized aerospace tooling set with full traceability and carrying case.",
         "features": [
-          "Outillage certifié aéronautique",
-          "Traçabilité complète",
-          "Mallette de transport",
-          "Documentation technique incluse"
+          "Aerospace-certified tooling",
+          "Full traceability",
+          "Carrying case",
+          "Technical documentation included"
         ],
         "link": "/aerotools"
       }
     ],
-    "cardCta": "Voir les détails",
-    "footerCta": "Découvrir AEROTOOLS"
+    "cardCta": "View Details",
+    "footerCta": "Discover AEROTOOLS"
   },
   "process": {
     "badge": "Our process",
@@ -119,77 +119,65 @@
   },
   "faq": {
     "badge": "FAQ",
-    "title": "Questions fréquentes",
-    "subtitle": "Tout ce que vous devez savoir sur nos équipements GSE et services associés.",
+    "title": "Frequently Asked Questions",
+    "subtitle": "Everything you need to know about our GSE equipment and related services.",
     "items": [
       {
-        "question": "Quelles certifications possèdent vos équipements ?",
-        "answer": "Tous nos équipements sont conformes à la Directive Machines 2006/42/CE et à la norme EN 12312-1. Chaque produit est livré avec déclaration de conformité UE, certificat de test CMU et notice d'utilisation."
+        "question": "What certifications do your equipment have?",
+        "answer": "All our equipment complies with Machinery Directive 2006/42/EC and EN 12312-1 standard. Each product is delivered with EU declaration of conformity, SWL test certificate and user manual."
       },
       {
-        "question": "Le RL125-02 est-il compatible avec mon hélicoptère ?",
-        "answer": "Le RL125-02 est conçu pour les H125/AS350 (patins Ø80 mm). Des adaptations sont disponibles pour EC120, EC130 et autres modèles via kits patins interchangeables."
+        "question": "Is the RL125-02 compatible with my helicopter?",
+        "answer": "The RL125-02 is designed for H125/AS350 (Ø80 mm skids). Adaptations are available for EC120, EC130 and other models via interchangeable skid kits."
       },
       {
-        "question": "Quels sont vos délais de livraison ?",
-        "answer": "Pour les références stockées (RL125-02, plateformes standard), comptez 2 à 4 semaines en France métropolitaine. Les productions sur-mesure nécessitent 6 à 10 semaines."
+        "question": "What are your delivery times?",
+        "answer": "For stocked references (RL125-02, standard platforms), allow 2 to 4 weeks for mainland France. Custom productions require 6 to 10 weeks."
       },
       {
-        "question": "Proposez-vous des contrats de maintenance ?",
-        "answer": "Oui, LLEDO Industries propose des contrats de maintenance préventive incluant inspection complète, contrôles hydrauliques, test CMU et remplacement des pièces d'usure."
+        "question": "Do you offer maintenance contracts?",
+        "answer": "Yes, LLEDO Industries offers preventive maintenance contracts including full inspection, hydraulic checks, SWL testing and wear parts replacement."
       },
       {
-        "question": "Quelle est la garantie ?",
-        "answer": "La garantie standard est de 24 mois pièces et main d'œuvre. Des extensions jusqu'à 5 ans sont disponibles, incluant maintenance préventive et prêt d'équipement."
+        "question": "What is the warranty?",
+        "answer": "Standard warranty is 24 months parts and labor. Extensions up to 5 years are available, including preventive maintenance and equipment loan."
       },
       {
-        "question": "Comment obtenir une étude personnalisée ?",
-        "answer": "Contactez-nous via le formulaire en ligne, par téléphone ou email. Indiquez le modèle d'hélicoptère, le volume et vos contraintes opérationnelles pour recevoir une recommandation sous 48 h."
+        "question": "How to get a customized study?",
+        "answer": "Contact us via the online form, by phone or email. Indicate the helicopter model, volume and your operational constraints to receive a recommendation."
       }
     ],
-    "contactCta": "Vous ne trouvez pas la réponse ?",
-    "contactDescription": "Nos experts sont disponibles pour répondre à vos questions et organiser une démonstration.",
-    "contactButton": "Nous contacter"
+    "contactCta": "Can't find the answer?",
+    "contactDescription": "Our experts are available to answer your questions and arrange a demonstration.",
+    "contactButton": "Contact Us"
   },
   "cta": {
-    "title": "Équipez votre flotte avec des solutions certifiées",
-    "subtitle": "Rejoignez plus de 70 opérateurs et centres MRO qui font confiance à LLEDO Industries.",
-    "primary": "Nous contacter",
-    "secondary": "Découvrir nos produits",
+    "title": "Equip your fleet with certified solutions",
+    "subtitle": "Trust an industrial partner committed to quality and support.",
+    "primary": "Contact Us",
+    "secondary": "Discover Our Products",
     "contacts": {
       "phone": {
-        "label": "Téléphone",
+        "label": "Phone",
         "value": "+33 4 42 02 96 74",
-        "info": "Lun-Ven 8h-18h"
+        "info": "Mon-Fri 8am-6pm CET"
       },
       "email": {
         "label": "Email",
         "value": "contact@lledo-industries.com",
-        "info": "Réponse sous 24 h"
+        "info": "We respond promptly"
       },
       "address": {
-        "label": "Adresse",
+        "label": "Address",
         "value": "9-11 Bd de la Capelane, 13170 Les Pennes-Mirabeau",
         "info": "France"
       }
     },
     "stats": [
-      {
-        "label": "Clients satisfaits",
-        "value": "70+"
-      },
-      {
-        "label": "Années d'expérience",
-        "value": "35"
-      },
-      {
-        "label": "Certifié CE",
-        "value": "100%"
-      },
-      {
-        "label": "Qualité ISO 9001",
-        "value": "ISO 9001"
-      }
+      { "label": "Expertise", "value": "Know-how" },
+      { "label": "Experience", "value": "Track record" },
+      { "label": "Compliance", "value": "Certified" },
+      { "label": "Quality", "value": "ISO 9001" }
     ]
   }
 }
