i18n: Correction textes hardcodés - Navigation, Footer, AuthModal, Admin (auth, ui, admin, certifications)

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -96,6 +96,83 @@
       "description": "داكن نيون"
     }
   },
+  "auth": {
+    "login": "تسجيل الدخول",
+    "logout": "تسجيل الخروج",
+    "register": "التسجيل",
+    "loginRegister": "تسجيل الدخول / التسجيل",
+    "myProfile": "ملفي الشخصي",
+    "dashboard": "لوحة التحكم",
+    "administrator": "مدير",
+    "createAccount": "إنشاء حساب",
+    "alreadyHaveAccount": "لديك حساب بالفعل؟",
+    "noAccount": "ليس لديك حساب؟",
+    "loginSuccess": "تم تسجيل الدخول بنجاح",
+    "loginError": "خطأ في تسجيل الدخول",
+    "logoutSuccess": "تم تسجيل الخروج بنجاح",
+    "invalidCredentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة",
+    "accountCreated": "تم إنشاء حسابك بنجاح",
+    "canNowLogin": "يمكنك الآن تسجيل الدخول",
+    "accessDenied": "تم رفض الوصول",
+    "adminRequired": "مطلوب صلاحيات المدير",
+    "connecting": "جاري الاتصال...",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "firstName": "الاسم الأول",
+    "lastName": "اسم العائلة",
+    "company": "الشركة",
+    "phone": "الهاتف",
+    "optional": "اختياري",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "passwordMismatch": "كلمات المرور غير متطابقة",
+    "passwordTooShort": "يجب أن تحتوي كلمة المرور على 6 أحرف على الأقل",
+    "registerError": "خطأ في التسجيل",
+    "creating": "جاري الإنشاء...",
+    "loginSubtitle": "سجل الدخول للوصول إلى حسابك",
+    "registerSubtitle": "انضم إلى مجتمع عملائنا",
+    "noAccountSignup": "ليس لديك حساب؟ سجل الآن",
+    "alreadyHaveAccountLogin": "لديك حساب بالفعل؟ سجل الدخول"
+  },
+  "ui": {
+    "loading": "جاري التحميل...",
+    "error": "حدث خطأ",
+    "success": "نجاح",
+    "cancel": "إلغاء",
+    "confirm": "تأكيد",
+    "save": "حفظ",
+    "delete": "حذف",
+    "edit": "تعديل",
+    "close": "إغلاق",
+    "back": "رجوع",
+    "next": "التالي",
+    "previous": "السابق",
+    "search": "بحث",
+    "filter": "تصفية",
+    "sort": "ترتيب",
+    "viewMore": "عرض المزيد",
+    "viewLess": "عرض أقل",
+    "readMore": "قراءة المزيد",
+    "learnMore": "معرفة المزيد",
+    "submit": "إرسال",
+    "openMenu": "فتح القائمة الرئيسية",
+    "closeMenu": "إغلاق القائمة"
+  },
+  "admin": {
+    "panel": "لوحة الإدارة",
+    "dashboard": "لوحة التحكم",
+    "companies": "الشركات",
+    "jobOffers": "عروض العمل",
+    "applications": "الطلبات",
+    "blog": "المدونة",
+    "mediaLibrary": "مكتبة الوسائط",
+    "reviews": "آراء العملاء"
+  },
+  "certifications": {
+    "ce": "علامة CE",
+    "iso9001": "ISO 9001:2015",
+    "en9100": "EN 9100",
+    "en12312": "EN 12312-1"
+  },
   "footer": {
     "company": {
       "title": "الشركة",
