--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -96,6 +96,83 @@
       "description": "Dark neon"
     }
   },
+  "auth": {
+    "login": "Login",
+    "logout": "Logout",
+    "register": "Register",
+    "loginRegister": "Login / Register",
+    "myProfile": "My Profile",
+    "dashboard": "Dashboard",
+    "administrator": "Administrator",
+    "createAccount": "Create Account",
+    "alreadyHaveAccount": "Already have an account?",
+    "noAccount": "Don't have an account?",
+    "loginSuccess": "Login successful",
+    "loginError": "Login error",
+    "logoutSuccess": "Logout successful",
+    "invalidCredentials": "Invalid email or password",
+    "accountCreated": "Your account has been created successfully",
+    "canNowLogin": "You can now log in",
+    "accessDenied": "Access denied",
+    "adminRequired": "Administrator rights required",
+    "connecting": "Connecting...",
+    "email": "Email",
+    "password": "Password",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "company": "Company",
+    "phone": "Phone",
+    "optional": "optional",
+    "confirmPassword": "Confirm password",
+    "passwordMismatch": "Passwords do not match",
+    "passwordTooShort": "Password must be at least 6 characters",
+    "registerError": "Registration error",
+    "creating": "Creating...",
+    "loginSubtitle": "Log in to access your account",
+    "registerSubtitle": "Join our client community",
+    "noAccountSignup": "Don't have an account? Sign up",
+    "alreadyHaveAccountLogin": "Already have an account? Log in"
+  },
+  "ui": {
+    "loading": "Loading...",
+    "error": "An error occurred",
+    "success": "Success",
+    "cancel": "Cancel",
+    "confirm": "Confirm",
+    "save": "Save",
+    "delete": "Delete",
+    "edit": "Edit",
+    "close": "Close",
+    "back": "Back",
+    "next": "Next",
+    "previous": "Previous",
+    "search": "Search",
+    "filter": "Filter",
+    "sort": "Sort",
+    "viewMore": "View More",
+    "viewLess": "View Less",
+    "readMore": "Read More",
+    "learnMore": "Learn More",
+    "submit": "Submit",
+    "openMenu": "Open main menu",
+    "closeMenu": "Close menu"
+  },
+  "admin": {
+    "panel": "Administration Panel",
+    "dashboard": "Dashboard",
+    "companies": "Companies",
+    "jobOffers": "Job Offers",
+    "applications": "Applications",
+    "blog": "Blog",
+    "mediaLibrary": "Media Library",
+    "reviews": "Client Reviews"
+  },
+  "certifications": {
+    "ce": "CE Marking",
+    "iso9001": "ISO 9001:2015",
+    "en9100": "EN 9100",
+    "en12312": "EN 12312-1"
+  },
   "footer": {
     "company": {
       "title": "Company",
