--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -96,6 +96,83 @@
       "description": "Oscuro neón"
     }
   },
+  "auth": {
+    "login": "Iniciar sesión",
+    "logout": "Cerrar sesión",
+    "register": "Registrarse",
+    "loginRegister": "Iniciar sesión / Registrarse",
+    "myProfile": "Mi perfil",
+    "dashboard": "Panel de control",
+    "administrator": "Administrador",
+    "createAccount": "Crear cuenta",
+    "alreadyHaveAccount": "¿Ya tienes una cuenta?",
+    "noAccount": "¿No tienes cuenta?",
+    "loginSuccess": "Inicio de sesión exitoso",
+    "loginError": "Error de inicio de sesión",
+    "logoutSuccess": "Cierre de sesión exitoso",
+    "invalidCredentials": "Email o contraseña incorrectos",
+    "accountCreated": "Su cuenta ha sido creada con éxito",
+    "canNowLogin": "Ahora puede iniciar sesión",
+    "accessDenied": "Acceso denegado",
+    "adminRequired": "Se requieren derechos de administrador",
+    "connecting": "Conectando...",
+    "email": "Email",
+    "password": "Contraseña",
+    "firstName": "Nombre",
+    "lastName": "Apellido",
+    "company": "Empresa",
+    "phone": "Teléfono",
+    "optional": "opcional",
+    "confirmPassword": "Confirmar contraseña",
+    "passwordMismatch": "Las contraseñas no coinciden",
+    "passwordTooShort": "La contraseña debe tener al menos 6 caracteres",
+    "registerError": "Error de registro",
+    "creating": "Creando...",
+    "loginSubtitle": "Inicie sesión para acceder a su cuenta",
+    "registerSubtitle": "Únase a nuestra comunidad de clientes",
+    "noAccountSignup": "¿No tiene cuenta? Regístrese",
+    "alreadyHaveAccountLogin": "¿Ya tiene cuenta? Inicie sesión"
+  },
+  "ui": {
+    "loading": "Cargando...",
+    "error": "Ha ocurrido un error",
+    "success": "Éxito",
+    "cancel": "Cancelar",
+    "confirm": "Confirmar",
+    "save": "Guardar",
+    "delete": "Eliminar",
+    "edit": "Editar",
+    "close": "Cerrar",
+    "back": "Volver",
+    "next": "Siguiente",
+    "previous": "Anterior",
+    "search": "Buscar",
+    "filter": "Filtrar",
+    "sort": "Ordenar",
+    "viewMore": "Ver más",
+    "viewLess": "Ver menos",
+    "readMore": "Leer más",
+    "learnMore": "Saber más",
+    "submit": "Enviar",
+    "openMenu": "Abrir menú principal",
+    "closeMenu": "Cerrar menú"
+  },
+  "admin": {
+    "panel": "Panel de administración",
+    "dashboard": "Panel de control",
+    "companies": "Empresas",
+    "jobOffers": "Ofertas de empleo",
+    "applications": "Candidaturas",
+    "blog": "Blog",
+    "mediaLibrary": "Mediateca",
+    "reviews": "Opiniones de clientes"
+  },
+  "certifications": {
+    "ce": "Marcado CE",
+    "iso9001": "ISO 9001:2015",
+    "en9100": "EN 9100",
+    "en12312": "EN 12312-1"
+  },
   "footer": {
     "company": {
       "title": "Empresa",
