--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -96,6 +96,83 @@
       "description": "Nocturne néon"
     }
   },
+  "auth": {
+    "login": "Connexion",
+    "logout": "Déconnexion",
+    "register": "Inscription",
+    "loginRegister": "Connexion / Inscription",
+    "myProfile": "Mon profil",
+    "dashboard": "Tableau de bord",
+    "administrator": "Administrateur",
+    "createAccount": "Créer un compte",
+    "alreadyHaveAccount": "Déjà un compte ?",
+    "noAccount": "Pas encore de compte ?",
+    "loginSuccess": "Connexion réussie",
+    "loginError": "Erreur de connexion",
+    "logoutSuccess": "Déconnexion réussie",
+    "invalidCredentials": "Email ou mot de passe incorrect",
+    "accountCreated": "Votre compte a été créé avec succès",
+    "canNowLogin": "Vous pouvez maintenant vous connecter",
+    "accessDenied": "Accès refusé",
+    "adminRequired": "Droits administrateur requis",
+    "connecting": "Connexion...",
+    "email": "Email",
+    "password": "Mot de passe",
+    "firstName": "Prénom",
+    "lastName": "Nom",
+    "company": "Entreprise",
+    "phone": "Téléphone",
+    "optional": "optionnel",
+    "confirmPassword": "Confirmer le mot de passe",
+    "passwordMismatch": "Les mots de passe ne correspondent pas",
+    "passwordTooShort": "Le mot de passe doit contenir au moins 6 caractères",
+    "registerError": "Erreur lors de l'inscription",
+    "creating": "Création...",
+    "loginSubtitle": "Connectez-vous pour accéder à votre espace",
+    "registerSubtitle": "Rejoignez notre communauté de clients",
+    "noAccountSignup": "Pas encore de compte ? Inscrivez-vous",
+    "alreadyHaveAccountLogin": "Déjà un compte ? Connectez-vous"
+  },
+  "ui": {
+    "loading": "Chargement...",
+    "error": "Une erreur est survenue",
+    "success": "Succès",
+    "cancel": "Annuler",
+    "confirm": "Confirmer",
+    "save": "Enregistrer",
+    "delete": "Supprimer",
+    "edit": "Modifier",
+    "close": "Fermer",
+    "back": "Retour",
+    "next": "Suivant",
+    "previous": "Précédent",
+    "search": "Rechercher",
+    "filter": "Filtrer",
+    "sort": "Trier",
+    "viewMore": "Voir plus",
+    "viewLess": "Voir moins",
+    "readMore": "Lire la suite",
+    "learnMore": "En savoir plus",
+    "submit": "Envoyer",
+    "openMenu": "Ouvrir le menu principal",
+    "closeMenu": "Fermer le menu"
+  },
+  "admin": {
+    "panel": "Panneau d'administration",
+    "dashboard": "Tableau de bord",
+    "companies": "Entreprises",
+    "jobOffers": "Offres d'emploi",
+    "applications": "Candidatures",
+    "blog": "Blog",
+    "mediaLibrary": "Médiathèque",
+    "reviews": "Avis clients"
+  },
+  "certifications": {
+    "ce": "Marquage CE",
+    "iso9001": "ISO 9001:2015",
+    "en9100": "EN 9100",
+    "en12312": "EN 12312-1"
+  },
   "footer": {
     "company": {
       "title": "Entreprise",
