--- a/src/i18n/locales/pt-BR/common.json
+++ b/src/i18n/locales/pt-BR/common.json
@@ -96,6 +96,83 @@
       "description": "Escuro neon"
     }
   },
+  "auth": {
+    "login": "Entrar",
+    "logout": "Sair",
+    "register": "Cadastrar",
+    "loginRegister": "Entrar / Cadastrar",
+    "myProfile": "Meu perfil",
+    "dashboard": "Painel de controle",
+    "administrator": "Administrador",
+    "createAccount": "Criar conta",
+    "alreadyHaveAccount": "Já tem uma conta?",
+    "noAccount": "Não tem conta?",
+    "loginSuccess": "Login realizado com sucesso",
+    "loginError": "Erro de login",
+    "logoutSuccess": "Logout realizado com sucesso",
+    "invalidCredentials": "Email ou senha incorretos",
+    "accountCreated": "Sua conta foi criada com sucesso",
+    "canNowLogin": "Agora você pode fazer login",
+    "accessDenied": "Acesso negado",
+    "adminRequired": "Direitos de administrador necessários",
+    "connecting": "Conectando...",
+    "email": "Email",
+    "password": "Senha",
+    "firstName": "Nome",
+    "lastName": "Sobrenome",
+    "company": "Empresa",
+    "phone": "Telefone",
+    "optional": "opcional",
+    "confirmPassword": "Confirmar senha",
+    "passwordMismatch": "As senhas não coincidem",
+    "passwordTooShort": "A senha deve ter pelo menos 6 caracteres",
+    "registerError": "Erro de registro",
+    "creating": "Criando...",
+    "loginSubtitle": "Faça login para acessar sua conta",
+    "registerSubtitle": "Junte-se à nossa comunidade de clientes",
+    "noAccountSignup": "Não tem conta? Cadastre-se",
+    "alreadyHaveAccountLogin": "Já tem conta? Faça login"
+  },
+  "ui": {
+    "loading": "Carregando...",
+    "error": "Ocorreu um erro",
+    "success": "Sucesso",
+    "cancel": "Cancelar",
+    "confirm": "Confirmar",
+    "save": "Salvar",
+    "delete": "Excluir",
+    "edit": "Editar",
+    "close": "Fechar",
+    "back": "Voltar",
+    "next": "Próximo",
+    "previous": "Anterior",
+    "search": "Buscar",
+    "filter": "Filtrar",
+    "sort": "Ordenar",
+    "viewMore": "Ver mais",
+    "viewLess": "Ver menos",
+    "readMore": "Ler mais",
+    "learnMore": "Saiba mais",
+    "submit": "Enviar",
+    "openMenu": "Abrir menu principal",
+    "closeMenu": "Fechar menu"
+  },
+  "admin": {
+    "panel": "Painel de administração",
+    "dashboard": "Painel de controle",
+    "companies": "Empresas",
+    "jobOffers": "Vagas de emprego",
+    "applications": "Candidaturas",
+    "blog": "Blog",
+    "mediaLibrary": "Biblioteca de mídia",
+    "reviews": "Avaliações de clientes"
+  },
+  "certifications": {
+    "ce": "Marcação CE",
+    "iso9001": "ISO 9001:2015",
+    "en9100": "EN 9100",
+    "en12312": "EN 12312-1"
+  },
   "footer": {
     "company": {
       "title": "Empresa",
